# FemsyInC

./: .gitignore
.VSCodeCounter/2024-12-29_21-35-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-29_21-36-16/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-29_22-38-57/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-29_23-22-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-12-30_18-06-27/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-02_23-33-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-02_23-33-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
FemsyInC/: CMakeLists.txt  Test.c  Test.h  main.c  test.c
FemsyInC/.VSCodeCounter/2024-12-31_23-34-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
FemsyInC/core/: CMakeLists.txt
FemsyInC/core/converter/: CMakeLists.txt  collectionConverter.c  converter.h
FemsyInC/core/coordinateSystem/: coordinateSystem.c  coordinateSystem.h  coordinateSystemTest.c
FemsyInC/core/element/: CMakeLists.txt  element.c  element.h  elementTest.c  elementTest.h
FemsyInC/core/matrix/: matrix.h  matrixTest.h
FemsyInC/core/polynomial/: CMakeLists.txt  Poly.h  PolyAdd.c  PolyCompare.c  PolyCreate.c  PolyDerivate.c  PolyEvaluate.c  PolyFit.c  PolyFree.c  PolyHelper.c  PolyHelper.h  PolyPrint.c  PolySubtract.c  PolyTest.c  PolyTest.h
FemsyInC/core/vector/: vector.h  vectorTest.h
FemsyInC/engine/: CMakeLists.txt
FemsyInC/engine/coordinateSystem/: CMakeLists.txt  CoordinateSystem.c  CoordinateSystem.h  b.c  b.h  coordinateSystem.c  coordinateSystem.h  coordinateSystemTest.c  coordinateSystemTest.h
FemsyInC/engine/matrix/: CMakeLists.txt  matrixHelper.c  matrixTest.c
FemsyInC/engine/polynomial/: CMakeLists.txt  Poly.h  PolyAdd.c  PolyAddTest.c  PolyCompare  PolyCompare.c  PolyCreate.c  PolyDerivate.c  PolyHelper.c  PolyHepler.h  PolyIntegrate.c  PolyMultiply.c  PolyPrint.c  PolySubtract.c  PolyTest.c  PolyTest.h  program.out  ympCMakeLists.txt
FemsyInC/engine/vector/: CMakeLists.txt  product.c  unitVector.c  vector.h  vectorTest.c
FemsyInC/helpers/: CMakeLists.txt  Helper.h  HelperTest.c  HelperTest.h  InputHelper.c  a.c  a.h  helper.h  transformationHelper.c
FemsyInC/input/: CMakeLists.txt  parser.c  parser.h
FemsyInC/input/example/: elements.csv  nodes.csv
FemsyInC/input/example-d93f6ff8-46af-443d-aa29-aa137b5f6db5/: edges.csv  nodes.csv
FemsyInC/logger/: CMakeLists.txt  collectionLogger.c  customTypeLogger.c  gslMatrixLogger.c  logger.h  standardLogger.c
FemsyInC/models/: CMakeLists.txt  c.c  c.h  types.c  types.h
biblioteki/area/: dome.py  poly_xy.py  test_trian.py  trian.py
biblioteki/arrays/: filter.py
biblioteki/matr_pom/: macierze_num.py
testy/: test_canvasClass.py  test_generator.py  test_mainWindow.py  test_przestrzenObiektow.py
(+64 files in other folders)
