cmake_minimum_required(VERSION 3.30)
project(FemsyInC C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_C_FLAGS_RELEASE "-O3 -DNDEBUG")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the build type: Debug or Release" FORCE)
endif()
find_package(GSL REQUIRED)
add_executable(FemsyInC main.c
        Test.c
        Test.h
)

#add_subdirectory(Google_tests)
add_subdirectory(core)
add_subdirectory(logger)
add_subdirectory(models)
add_subdirectory(input)
add_subdirectory(helpers)
target_link_libraries(FemsyInC PRIVATE parser)
target_link_libraries(FemsyInC PRIVATE logger)
target_link_libraries(FemsyInC PRIVATE coordinateSystem)
target_link_libraries(FemsyInC PRIVATE vector)
target_link_libraries(FemsyInC PRIVATE matrix)
target_link_libraries(FemsyInC PRIVATE poly)
target_link_libraries(FemsyInC PRIVATE model)
target_link_libraries(FemsyInC PRIVATE helper)
target_link_libraries(FemsyInC PRIVATE converters)
target_link_libraries(FemsyInC PRIVATE element)
